<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <item
            android:id="@+id/menu_delete_check"
            android:icon="@drawable/ic_action_delete"
            android:showAsAction="ifRoom|withText"
            android:title="@string/delete"
            android:orderInCategory="1"
            >
        </item>


        <item
                android:icon="@drawable/ic_action_sort"
                android:showAsAction="always"
                android:title="@string/sort"
                android:id="@+id/menu_sort">
                <menu>
                        <group android:checkableBehavior="single">
                                <item android:id="@+id/menu_sort_date"
                                    android:checked="true"
                                    android:title="@string/sort_date">

                                </item>
                                <item android:title="@string/sort_name"

                                      android:id="@+id/menu_sort_name">

                                </item>
                                <item android:title="@string/priority"
                                      android:id="@+id/menu_sort_priority">

                                </item>
                        </group>
                </menu>

        </item>




        <item
        android:id="@+id/new_task"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/add_task"
        android:icon="@drawable/ic_action_new"    />
</menu>
